--- a/src/app/features/orders/orders/orders.component.html
+++ b/src/app/features/orders/orders/orders.component.html
@@ -5,6 +5,10 @@
       <a mat-raised-button class="actions-main" color="primary">
         {{ 'stms.orders.get-orders' | translate }}
       </a>
+      <div *ngFor="let order of ordersList$ | async">
+        <p>{{order.orderName}} - {{order.orderNum}}</p>
+        <br>
+      </div>
       <!--
         Endpoint to fetch data: https://api.mocki.io/v2/79fb05cb
        -->
