--- a/src/app/features/orders/orders/orders.component.html
+++ b/src/app/features/orders/orders/orders.component.html
@@ -2,16 +2,21 @@
   <div rtl>
     <h1 class="main-heading">{{ 'stms.orders.title' | translate }}</h1>
     <div class="actions">
-      <a mat-raised-button class="actions-main" color="primary">
+      <a mat-raised-button class="actions-main" color="primary" (click)="getAllOrders()">
         {{ 'stms.orders.get-orders' | translate }}
       </a>
-      <div *ngFor="let order of ordersList$ | async">
-        <p>{{order.orderName}} - {{order.orderNum}}</p>
-        <br>
+
+      <div style="height: 500px; width: 1000px">
+        <ag-grid-angular
+                [columnDefs]="columnDefs"
+                [defaultColDef]="defaultColDef"
+                [rowData]="rowData$ | async"
+                [animateRows]="true"
+                [context]="context"
+                style="width: 100%; height: 100%"
+                class="ag-theme-alpine">
+        </ag-grid-angular>
       </div>
-      <!--
-        Endpoint to fetch data: https://api.mocki.io/v2/79fb05cb
-       -->
     </div>
   </div>
 </div>
