--- a/src/app/features/favorites/favorites/favorites/favorites.component.html
+++ b/src/app/features/favorites/favorites/favorites/favorites.component.html
@@ -1,16 +1,18 @@
-<div class="container">
-    <div rtl>
-        <h1 class="main-heading">{{ 'stms.favorites.title' | translate }}</h1>
-        <div style="height: 500px; width: 1000px">
-            <ag-grid-angular
-                    [columnDefs]="columnDefs"
-                    [defaultColDef]="defaultColDef"
-                    [rowData]="rowData$ | async"
-                    [animateRows]="true"
-                    [context]="context"
-                    style="width: 100%; height: 100%"
-                    class="ag-theme-alpine">
-            </ag-grid-angular>
+<div class="container" rtl>
+    <div class="row">
+        <div class="col">
+            <h1 class="main-heading pt-2 mb-4">{{ 'stms.favorites.title' | translate }}</h1>
         </div>
+    </div>
+    <div class="row" [ngClass]="routeAnimationsElements">
+        <ag-grid-angular
+                class="ag-theme-material data-grid"
+                [columnDefs]="columnDefs"
+                [defaultColDef]="defaultColDef"
+                [rowData]="rowData$ | async"
+                [animateRows]="true"
+                [context]="context"
+                (gridReady)="onGridReady($event)">
+        </ag-grid-angular>
     </div>
 </div>
