--- a/src/app/features/orders/orders/orders.component.html
+++ b/src/app/features/orders/orders/orders.component.html
@@ -1,22 +1,26 @@
-<div class="container">
-  <div rtl>
-    <h1 class="main-heading">{{ 'stms.orders.title' | translate }}</h1>
-    <div class="actions">
-      <a mat-raised-button class="actions-main" color="primary" (click)="getAllOrders()">
-        {{ 'stms.orders.get-orders' | translate }}
-      </a>
-
-      <div style="height: 500px; width: 1000px">
-        <ag-grid-angular
-                [columnDefs]="columnDefs"
-                [defaultColDef]="defaultColDef"
-                [rowData]="rowData$ | async"
-                [animateRows]="true"
-                [context]="context"
-                style="width: 100%; height: 100%"
-                class="ag-theme-alpine">
-        </ag-grid-angular>
+<div class="container" rtl>
+  <div class="row">
+    <div class="col">
+      <h1 class="main-heading mt-2">{{ 'stms.orders.title' | translate }}</h1>
+      <div class="actions my-4">
+        <a mat-raised-button class="actions-main" color="primary" (click)="getAllOrders()">
+          {{ 'stms.orders.get-orders' | translate }}
+        </a>
       </div>
+    </div>
+  </div>
+  <div class="row align-items-center" [ngClass]="routeAnimationsElements">
+    <div class="col">
+      <ag-grid-angular
+              class="ag-theme-material data-grid"
+              [columnDefs]="columnDefs"
+              [defaultColDef]="defaultColDef"
+              [rowData]="rowData$ | async"
+              [animateRows]="true"
+              [context]="context"
+              (gridReady)="onGridReady($event)"
+      >
+      </ag-grid-angular>
     </div>
   </div>
 </div>
