--- a/src/app/shared/components/table-favorite-column/table-favorite-column.component.html
+++ b/src/app/shared/components/table-favorite-column/table-favorite-column.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button (click)="toggle()">
-    <mat-icon><fa-icon [icon]="isFavorite ? 'heart' : 'heart-broken'"></fa-icon></mat-icon>
+<button mat-icon-button class="like-btn" (click)="toggle()">
+    <mat-icon><fa-icon size="lg" [icon]="isFavorite ? 'heart' : 'heart-broken'"></fa-icon></mat-icon>
 </button>
