--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@
 @import './app/features/patients/patients/patients.component.scss-theme';
 
 @import 'ag-grid-community/dist/styles/ag-grid.css';
-@import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
+@import 'ag-grid-community/dist/styles/ag-theme-material.css';
 
 @include mat-core();
 
@@ -45,4 +45,9 @@
 .nature-theme {
   @include angular-material-theme($st-nature-theme);
   @include custom-components-theme($st-nature-theme);
+}
+
+.data-grid {
+  width: 100%;
+  height: 650px;
 }
